# cloudflare-dyndns

./: .gitignore  Dockerfile  Dockerfile-go  Justfile  LICENSE  README.md  cache.go  cfdns.py  change_ip.py  cloudflare.go  cloudflare_dyndns.py  default.nix  devenv.nix  flake.nix  go.mod  ip_services.go  main.go  meta.nix  printer.go  pyoxidizer.bzl  pyproject.toml  requirements.txt  test_cfdns.py  test_ip_services.py  types.go  updater.go
.github/workflows/: claude-code-review.yml  claude.yml
bruno/: Get DNS records.bru  List Zones.bru  bruno.json  collection.bru
bruno/environments/: Default.bru
cloudflare_dyndns/: cache.py  cli.py  cloudflare.py  ip_services.py  printer.py  types.py  updater.py
tests/: conftest.py  test_cache.py  test_ip_services.py
