[tool.poetry]
name = "cloudflare-dyndns"
version = "5.0"
description = "CloudFlare Dynamic DNS client"
authors = ["Kiss György <gyorgy@duck.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kissgyorgy/cloudflare-dyndns"


[tool.poetry.dependencies]
python = "^3.11"
click = "*"
pydantic = "^2"
truststore = "*"
httpx = "*"

[tool.poetry.scripts]
cloudflare-dyndns = 'cloudflare_dyndns.cli:main'

[tool.poetry.group.dev.dependencies]
pyoxidizer = "*"
pytest = "*"
pylint-starlark = "*"

[tool.pytest.ini_options]
markers = ["ipv6: Run IPv6 related tests with the --ipv6 custom pytest option"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
