[project]
authors = [{ name = "György Kiss", email = "gyorgy@duck.com" }]
name = "cloudflare-dyndns"
version = "5.4"
description = "CloudFlare Dynamic DNS client"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "truststore>=0.10.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.6",
    "pytest>=8.3.4",
]

[project.scripts]
cloudflare-dyndns = 'cloudflare_dyndns.cli:main'

[tool.pytest.ini_options]
markers = ["ipv6: Run IPv6 related tests with the --ipv6 custom pytest option"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
